--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # ignored the env file
-**/environment
-
+/src/environment
 # Compiled output
 /dist
 /tmp
