--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "ngx-toastr": "^16.1.0",
     "realm-web": "^2.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
