--- a/todos/angular.json
+++ b/todos/angular.json
@@ -55,19 +55,24 @@
                   "maximumError": "10kb"
                 }
               ]
-            }
-          }
+            },
+            "development": {}
+          },
+          "defaultConfiguration": "production"
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "todos:build"
           },
           "configurations": {
             "production": {
               "browserTarget": "todos:build:production"
+            },
+            "development": {
+              "browserTarget": "todos:build:development"
             }
-          }
+          },
+          "defaultConfiguration": "development"
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
@@ -108,14 +113,17 @@
         "e2e": {
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
-            "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "todos:serve"
+            "protractorConfig": "e2e/protractor.conf.js"
           },
           "configurations": {
             "production": {
               "devServerTarget": "todos:serve:production"
+            },
+            "development": {
+              "devServerTarget": "todos:serve:development"
             }
-          }
+          },
+          "defaultConfiguration": "development"
         }
       }
     }
