--- a/AngularUnitTest/package.json
+++ b/AngularUnitTest/package.json
@@ -26,6 +26,9 @@
     "@angular-devkit/build-angular": "^17.2.2",
     "@angular/cli": "^17.2.2",
     "@angular/compiler-cli": "^17.2.0",
+    "@types/jest": "^29.5.12",
+    "jest": "^29.7.0",
+    "jest-preset-angular": "^14.0.3",
     "typescript": "~5.3.2"
   }
 }
