--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@angular/cli": "~17.3.8",
     "@angular/compiler-cli": "^17.3.11",
     "@types/jasmine": "~4.3.0",
+    "firebase-tools": "^13.11.2",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
