firebase run script updated

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "ng serve --host=0.0.0.0",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "firebase:login": "firebase login",
+    "firebase:deploy": "firebase deploy"
   },
   "private": true,
   "dependencies": {
