--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@angular/cli": "~17.3.8",
     "@angular/compiler-cli": "^17.3.11",
     "@types/jasmine": "~4.3.0",
+    "autoprefixer": "^10.4.19",
     "firebase-tools": "^13.11.2",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
@@ -41,6 +42,8 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.4",
     "typescript": "^5.4.5"
   }
 }
