--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,8 @@
             "styles": [
               "@angular/material/prebuilt-themes/purple-green.css",
               "src/styles.css",
-              "node_modules/ngx-toastr/toastr.css"
+              "node_modules/ngx-toastr/toastr.css",
+              "src/styles/tailwind.css"
             ],
             "scripts": [],
             "serviceWorker": true,
