--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve --host=0.0.0.0",
     "build": "ng build",
+    "build:deploy": "ng build && firebase deploy",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "firebase:login": "firebase login",
