--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -18,7 +18,7 @@ jobs:
           REALM_APP_ID: ${{ secrets.REALM_APP_ID }}
           PASSWORD: ${{ vars.PASSWORD }}
         run: |
-          echo ${{ vars.PASSWORD }}
+          echo "variable from shell environment : $PASSWORD"
           mkdir -p dist/environment
           touch dist/environment/environment.ts
           echo "export const environmentValues = {
