--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -18,12 +18,13 @@ jobs:
           REALM_APP_ID: ${{ secrets.REALM_APP_ID }}
           PASSWORD: ${{ vars.PASSWORD }}
         run: |
+          echo ${{ vars.PASSWORD }}
           mkdir -p dist/environment
           touch dist/environment/environment.ts
           echo "export const environmentValues = {
             REALM_API_KEY: '$REALM_API_KEY',
             REALM_APP_ID: '$REALM_APP_ID',
-            PASSWORD: '$PASSWORD',
+            PASSWORD: ${{ vars.PASSWORD }},
           };" > dist/environment/environment.ts && echo "File created successfully" || echo "Error creating file"
           cat dist/environment/environment.ts
       # - uses: FirebaseExtended/action-hosting-deploy@v0
