--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -14,12 +14,10 @@ jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
     steps:
-      # - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
       # - run: npm ci && npm run build
       - name: Create environment file
-        run: |
-          echo ${{ vars.PASSWORD }}
-          echo ${{ secrets.REALM_API_KEY }}
+        run: echo ${{ vars.PASSWORD }}
       # - uses: FirebaseExtended/action-hosting-deploy@v0
         # with:
         #   repoToken: ${{ secrets.GITHUB_TOKEN }}
