--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -6,15 +6,15 @@ on:
   push:
     branches:
       - master
-env:
-    REALM_API_KEY: ${{ secrets.REALM_API_KEY }}
-    REALM_APP_ID: ${{ secrets.REALM_APP_ID }}
-    PASSWORD: ${{ vars.PASSWORD }}
+# env:
+#     REALM_API_KEY: ${{ secrets.REALM_API_KEY }}
+#     REALM_APP_ID: ${{ secrets.REALM_APP_ID }}
+#     PASSWORD: ${{ vars.PASSWORD }}
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      # - uses: actions/checkout@v4
       # - run: npm ci && npm run build
       - name: Create environment file
         run: echo ${{ secrets.FIREBASE_SERVICE_ACCOUNT_ROOMFOODAPP_JDPS }}
