--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -17,7 +17,7 @@ jobs:
       # - uses: actions/checkout@v4
       # - run: npm ci && npm run build
       - name: Create environment file
-        run: echo ${{ secrets.GITHUB_TOKEN }}
+        run: echo ${{ secrets.FIREBASE_TOKEN }}
       # - uses: FirebaseExtended/action-hosting-deploy@v0
         # with:
         #   repoToken: ${{ secrets.GITHUB_TOKEN }}
