--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -17,7 +17,7 @@ jobs:
         env:
           REALM_API_KEY: ${{ secrets.REALM_API_KEY }}
           REALM_APP_ID: ${{ secrets.REALM_APP_ID }}
-          PASSWORD: ${{ secrets.PASSWORD }}
+          PASSWORD: ${{ vars.PASSWORD }}
         run: |
           echo "export const environmentValues = {
             REALM_API_KEY: '$REALM_API_KEY',
