environment.ts file create

--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -18,6 +18,8 @@ jobs:
           REALM_APP_ID: ${{ secrets.REALM_APP_ID }}
           PASSWORD: ${{ vars.PASSWORD }}
         run: |
+          mkdir -p src/environment
+          touch src/environment/environment.ts
           echo "export const environmentValues = {
             REALM_API_KEY: '$REALM_API_KEY',
             REALM_APP_ID: '$REALM_APP_ID',
