--- a/Nx/AngularWithRsBuild/package.json
+++ b/Nx/AngularWithRsBuild/package.json
@@ -28,6 +28,7 @@
     "@angular/compiler-cli": "~19.0.0",
     "@angular/language-service": "~19.0.0",
     "@eslint/js": "^9.8.0",
+    "@ng-rsbuild/plugin-angular": "^19.0.0-alpha.15",
     "@nx/angular": "20.3.0",
     "@nx/eslint": "20.3.0",
     "@nx/eslint-plugin": "20.3.0",
@@ -35,6 +36,7 @@
     "@nx/js": "20.3.0",
     "@nx/web": "20.3.0",
     "@nx/workspace": "20.3.0",
+    "@rsbuild/core": "^1.1.13",
     "@schematics/angular": "~19.0.0",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
