--- a/Angular/ProfileManager/.gitignore
+++ b/Angular/ProfileManager/.gitignore
@@ -41,3 +41,6 @@ __screenshots__/
 # System files
 .DS_Store
 Thumbs.db
+
+# Environment variables with real credentials (never commit)
+src/environments/environment.ts
