--- a/Angular/ProfileManager/package.json
+++ b/Angular/ProfileManager/package.json
@@ -43,6 +43,7 @@
     "@angular/cli": "^20.3.7",
     "@angular/compiler-cli": "^20.3.0",
     "@types/jasmine": "~5.1.0",
+    "firebase-tools": "^14.22.0",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
