Add Firebase deployment script and update .gitignore
- Added a new script for Firebase deployment in package.json to streamline hosting updates.
- Updated .gitignore to exclude Firebase-related files, ensuring sensitive data remains untracked.

--- a/Angular/ProfileManager/.gitignore
+++ b/Angular/ProfileManager/.gitignore
@@ -44,3 +44,6 @@ Thumbs.db
 
 # Environment variables with real credentials (never commit)
 src/environments/environment.ts
+
+#Firebase
+.firebase/
