--- a/Angular/ProfileManager/package.json
+++ b/Angular/ProfileManager/package.json
@@ -7,7 +7,15 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "firebase:deploy": "firebase deploy --only hosting:profilearc"
+    "firebase:deploy": "firebase deploy --only hosting:profilearc",
+    "prepare": "cd ../.. && husky Angular/ProfileManager/.husky",
+    "format": "prettier --write \"src/**/*.{ts,html,css,scss,json}\"",
+    "format:check": "prettier --check \"src/**/*.{ts,html,css,scss,json}\""
+  },
+  "lint-staged": {
+    "*.{ts,js,html,css,scss,json}": [
+      "prettier --write"
+    ]
   },
   "prettier": {
     "printWidth": 100,
@@ -45,12 +53,15 @@
     "@angular/compiler-cli": "^20.3.0",
     "@types/jasmine": "~5.1.0",
     "firebase-tools": "^14.22.0",
+    "husky": "^9.1.7",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "lint-staged": "^16.2.6",
+    "prettier": "^3.6.2",
     "typescript": "~5.9.2"
   }
 }
