Add ESLint configuration and ignore files for improved code quality
- Introduced .eslintignore to exclude unnecessary files and directories from linting.
- Added eslint.config.js to configure ESLint with Angular and TypeScript support, including rules for unused imports and Angular-specific directives.
- Updated angular.json to integrate linting options for TypeScript and HTML files.
- Enhanced package.json and package-lock.json to include necessary ESLint dependencies for better code quality enforcement.

--- a/Angular/ProfileManager/angular.json
+++ b/Angular/ProfileManager/angular.json
@@ -74,6 +74,15 @@
             ],
             "styles": ["src/styles.css"]
           }
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": [
+              "src/**/*.ts",
+              "src/**/*.html"
+            ]
+          }
         }
       }
     }
