Update angular.json configuration for build optimization and linting
- Increased budget limits for initial build size to 1MB warning and 2MB error.
- Enabled named chunks for better debugging and performance in production builds.
- Streamlined linting configuration by consolidating file patterns for improved readability.

--- a/Angular/ProfileManager/angular.json
+++ b/Angular/ProfileManager/angular.json
@@ -28,8 +28,8 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kB",
-                  "maximumError": "1MB"
+                  "maximumWarning": "1MB",
+                  "maximumError": "2MB"
                 },
                 {
                   "type": "anyComponentStyle",
@@ -37,11 +37,13 @@
                   "maximumError": "8kB"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "namedChunks": true
             },
             "development": {
               "optimization": false,
               "extractLicenses": false,
+              "namedChunks": true,
               "sourceMap": true
             }
           },
@@ -78,10 +80,7 @@
         "lint": {
           "builder": "@angular-eslint/builder:lint",
           "options": {
-            "lintFilePatterns": [
-              "src/**/*.ts",
-              "src/**/*.html"
-            ]
+            "lintFilePatterns": ["src/**/*.ts", "src/**/*.html"]
           }
         }
       }
