--- a/Angular/ProfileManager/package.json
+++ b/Angular/ProfileManager/package.json
@@ -38,14 +38,14 @@
   "private": true,
   "dependencies": {
     "@angular/cdk": "^20.2.10",
-    "@angular/common": "^20.3.0",
-    "@angular/compiler": "^20.3.0",
-    "@angular/core": "^20.3.0",
+    "@angular/common": "^21.0.1",
+    "@angular/compiler": "^21.0.1",
+    "@angular/core": "^21.0.1",
     "@angular/fire": "^20.0.1",
-    "@angular/forms": "^20.3.0",
+    "@angular/forms": "^21.0.1",
     "@angular/material": "^20.2.10",
-    "@angular/platform-browser": "^20.3.0",
-    "@angular/router": "^20.3.0",
+    "@angular/platform-browser": "^21.0.1",
+    "@angular/router": "^21.0.1",
     "@tailwindcss/postcss": "^4.1.16",
     "firebase": "^11.10.0",
     "postcss": "^8.5.6",
@@ -59,9 +59,9 @@
     "@angular-eslint/eslint-plugin-template": "^20.5.0",
     "@angular-eslint/schematics": "^20.5.0",
     "@angular-eslint/template-parser": "^20.5.0",
-    "@angular/build": "^20.3.7",
-    "@angular/cli": "^20.3.7",
-    "@angular/compiler-cli": "^20.3.0",
+    "@angular/build": "^21.0.1",
+    "@angular/cli": "^21.0.1",
+    "@angular/compiler-cli": "^21.0.1",
     "@types/jasmine": "~5.1.0",
     "eslint": "^9.38.0",
     "eslint-plugin-unused-imports": "^4.3.0",
@@ -74,6 +74,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "lint-staged": "^16.2.6",
+    "postcss": "^8.5.3",
     "prettier": "^3.6.2",
     "typescript": "~5.9.2",
     "typescript-eslint": "^8.46.2"
